non_executable_reasons_record_from_random_10k/3179.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
"""
Author: Bryan Bo Cao
Email: boca7588@colorado.edu or bo.cao-1@colorado.edu
Github Repo: https://github.com/BryanBo-Cao/neuralnets-deeplearning
Reference:
    https://github.com/tylersco/deep-neural-networks-art-images
    http://www.scipy-lectures.org/advanced/image_processing/
"""
from scipy import misc
import scipy
import tensorflow as tf
import numpy as np
import matplotlib.pyplot as plt
import os, sys
import glob
import pandas as pd
import csv
import math
from __future__ import division, print_function, absolute_import
from data.img.ArtDataLoader import ArtData
from Plotter import plot_acc_distance
from Plotter import plot_acc_cosine
from Plotter import plot_prob_distance_2lists
from Plotter import plot_prob_cosine_2lists
from Plotter import plot_prob_distance_4lists
from Plotter import plot_prob_cosine_4lists
from MySpearman import get_correlation_distance
from MySpearman import get_correlation_cosine
from scipy.stats import spearmanr
------------------

[0;36m  File [0;32m"<ipython-input-1-bef6ad2ff89f>"[0;36m, line [0;32m24[0m
[0;31m    from Plotter import plot_acc_cosine[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-bef6ad2ff89f>, line 24)

Executability                            : False
